# p4io-mdxfdrv

./: .gitmodules  99-p4io.rules  CMakeLists.txt  README.md
src/: main.c  mdxf.c  mdxf.h  p4io.c  p4io.h  p4iotest.c  uinput.c
src/drv/: device-optimized.c  port_linux.c  port_linux.h  termios_util.c  termios_util.h
src/drv/stub/: windows.c  windows.h
src/thread/: thread.h  thread_linux.c  thread_win.c
src/util/: log_linux.c  util.c
